// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Forms/FormTextarea Compact 1`] = `
<div
  dir="ltr"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <textarea
          className="fd-textarea fd-textarea--compact"
          defaultValue="Compact textarea"
          onChange={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Dev 1`] = `
<div
  dir="ltr"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <textarea
          className="fd-textarea"
          defaultValue="Default"
          disabled={false}
          onChange={[Function]}
          readOnly={false}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Disabled 1`] = `
<div
  dir="ltr"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <textarea
          className="fd-textarea"
          defaultValue="Disabled textarea"
          disabled={true}
          onChange={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Max Length 1`] = `
<div
  dir="ltr"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <textarea
          className="fd-textarea"
          defaultValue="Max Length"
          maxLength={150}
          onChange={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="fd-textarea-counter"
  >
    140 characters left
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Primary 1`] = `
<div
  dir="ltr"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <textarea
          className="fd-textarea"
          defaultValue="Placeholder"
          onChange={[Function]}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Read Only 1`] = `
<div
  dir="ltr"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      onFocus={[Function]}
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    >
      <div
        className="fd-popover__control"
      >
        <textarea
          className="fd-textarea"
          defaultValue="Placeholder"
          onChange={[Function]}
          readOnly={true}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Component API/Forms/FormTextarea Validation States 1`] = `
<div
  dir="ltr"
>
  <div
    className="fddocs-container"
  >
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <textarea
            className="fd-textarea is-error"
            defaultValue="Error State"
            onChange={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <textarea
            className="fd-textarea is-warning"
            defaultValue="Warning State"
            onChange={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <textarea
            className="fd-textarea is-information"
            defaultValue="Information State"
            onChange={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onFocus={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
      >
        <div
          className="fd-popover__control"
        >
          <textarea
            className="fd-textarea is-success"
            defaultValue="Success State"
            onChange={[Function]}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
